fixed bug where demo modal was pushed off screen when in mobile landscape orientation

--- a/src/pages/Welcome/Welcome.scss
+++ b/src/pages/Welcome/Welcome.scss
@@ -38,6 +38,14 @@
     background-color: rgba(0, 0, 0, 0.5019607843);
     z-index: 1000;
 
+    @media screen and (max-width: 1279px) and (orientation: landscape) {
+      padding: 3rem 0;
+    }
+
+    @media screen and (max-width: 767px) and (orientation: landscape) {
+      padding: 1rem 0;
+    }
+
     &-container {
       width: 90%;
       position: relative;
